--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ssm
+jdbc.url=jdbc:mysql://192.168.1.107:3306/ssm?useUnicode=true&characterEncoding=utf8
 jdbc.username = root
 jdbc.password=root
